start hacking on application/json

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </p>
       <ul>
         <li><a href='cursed.html'>cursed</a> — minimal primitive for cursors</li>
+        <li><a href='json.html'>application/json</a> — submitting a form as JSON</li>
       </ul>
       <p>
         Feedback is welcome on anything you might find here. Don't use anything you find in
