starting to get a decent algorithm for JSON creation

--- a/json.html
+++ b/json.html
@@ -21,6 +21,15 @@
     <section>
       <h2>Example</h2>
       <form id='x'>
+        <input type=text name='aaa' value='A'>
+        <input type=text name='bbb' value='A'>
+        <input type=text name='ccc' value='A'>
+        <input type=text name='ccc' value='A1'>
+        <input type=text name='ccc' value='A2'>
+        <input type=text name='ddd[e1]' value='E'>
+        <input type=text name='ddd[e2]' value='F'>
+        <input type=text name='ddd[e2]' value='X'>
+<!--
         <input type=text name='dupe' value='A'>
         <input type=text name='dupe' value='B'>
         <input type=text name='second[1]' value='X'>
@@ -42,6 +51,7 @@
         <input type=text name='err[bar]x' value='X'>
         <input type=text name='err[bar][foo][bax]]' value='X'>
         <input type=text name='err[bar]x[foo]' value='X'>
+-->
       </form>
 
       <pre id='log'></pre>
