--- a/json.html
+++ b/json.html
@@ -29,29 +29,35 @@
         <input type=text name='ddd[e1]' value='E'>
         <input type=text name='ddd[e2]' value='F'>
         <input type=text name='ddd[e2]' value='X'>
-<!--
+        <input type=text name='test' value='X'>
+        <input type=text name='test[aaa]' value='Y'>
+        <input type=text name='test2[aaa]' value='Y'>
+        <input type=text name='test2' value='X'>
         <input type=text name='dupe' value='A'>
         <input type=text name='dupe' value='B'>
         <input type=text name='second[1]' value='X'>
+        <input type=number name='disorder[5]' value='5'>
+        <input type=text name='disorder[1]' value='X'>
+        <input type=text name='disorder[0]' value='Y'>
         <input type=text name='obj[bar]' value='X'>
         <input type=text name='obj[bar][0]' value='X'>
         <input type=text name='obj[0][bar]' value='X'>
         <input type=text name='deep[one][two][three][4][five][6][7][eight]' value='X'>
         <input type=text name='append[]' value='X'>
         <input type=text name='append[]' value='Y'>
+        <input type=text name='append-solo[]' value='Y'>
         <input type=text name='appends[][]' value='X'>
         <input type=text name='appends[][]' value='Y'>
         <input type=text name='str-obj' value='empty'>
         <input type=text name='str-obj[bar]' value='bar'>
         <input type=text name='str-arr' value='empty'>
-        <input type=text name='str-obj[0]' value='zero'>
+        <input type=text name='str-arr[0]' value='zero'>
         <input type=text name='obj-arr[bar]' value='obj'>
         <input type=text name='obj-arr[0]' value='arr'>
         <input type=text name='err[' value='X'>
         <input type=text name='err[bar]x' value='X'>
         <input type=text name='err[bar][foo][bax]]' value='X'>
-        <input type=text name='err[bar]x[foo]' value='X'>
--->
+        <input type=checkbox name='err[bar]x[foo]' checked>
       </form>
 
       <pre id='log'></pre>
