use b64 instead of data URIs, fix bug with multiple file handling

--- a/json.html
+++ b/json.html
@@ -21,6 +21,7 @@
     <section>
       <h2>Example</h2>
       <form id='x'>
+        <input type=file name='file' multiple>
         <input type=file name='file'>
         <input type=text name='aaa' value='A'>
         <input type=text name='bbb' value='A'>
