--- a/specs/json.html
+++ b/specs/json.html
@@ -207,7 +207,7 @@
       </p>
       <pre class='example highlight' title='Append'>
         &lt;form enctype=&#x27;application/json&#x27;&gt;
-          <input name='highlander[]' value='one'>
+          &lt;input name=&#x27;highlander[]&#x27; value=&#x27;one&#x27;&gt;
         &lt;/form&gt;
 
         // produces
@@ -223,7 +223,7 @@
       </p>
       <pre class='example highlight' title='Files'>
         &lt;form enctype=&#x27;application/json&#x27;&gt;
-          <input type='file' name='file' multiple>
+          &lt;input type=&#x27;file&#x27; name=&#x27;file&#x27; multiple&gt;
         &lt;/form&gt;
 
         // assuming the user has selected two text files, produces:
