--- a/index.html
+++ b/index.html
@@ -18,13 +18,24 @@
         Current experiments include:
       </p>
       <ul>
-        <li><a href='cursed.html'>cursed</a> — minimal primitive for cursors</li>
         <li><a href='json.html'>application/json</a> — submitting a form as JSON</li>
+      </ul>
+      <p>
+        Specifications to go with:
+      </p>
+      <ul>
+        <li><a href='specs/json/index.html'>JSON form submission</a></li>
       </ul>
       <p>
         Feedback is welcome on anything you might find here. Don't use anything you find in
         production unless you really know what you're doing.
       </p>
+      <p>
+        Past experiments:
+      </p>
+      <ul>
+        <li><a href='cursed.html'>cursed</a> — minimal primitive for cursors</li>
+      </ul>
     </section>
     <footer>
       <h3>formic</h3>
