--- a/specs/json.html
+++ b/specs/json.html
@@ -138,7 +138,7 @@
         &lt;form enctype=&#x27;application/json&#x27;&gt;
           &lt;input name=&#x27;pet[0][species]&#x27; value=&#x27;Dahut&#x27;&gt;
           &lt;input name=&#x27;pet[0][name]&#x27; value=&#x27;Hypatia&#x27;&gt;
-          &lt;input name=&#x27;pet[1][species]&#x27; value=&#x27;Stupid Cat&#x27;&gt;
+          &lt;input name=&#x27;pet[1][species]&#x27; value=&#x27;Felis Stultus&#x27;&gt;
           &lt;input name=&#x27;pet[1][name]&#x27; value=&#x27;Billie&#x27;&gt;
         &lt;/form&gt;
 
@@ -150,7 +150,7 @@
                 ,   "name":     "Hypatia"
                 }
             ,   {
-                    "species":  "Stupid Cat"
+                    "species":  "Felis Stultus"
                 ,   "name":     "Billie"
                 }
             ]
@@ -260,6 +260,9 @@
         ,   "error[bad":  "BOOM BOOM!"
         }
       </pre>
+      <!--
+        XXX show example of really deep nesting
+      -->
       <section>
         <h2>Issues</h2>
         <p>
