sort out file layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         Current experiments include:
       </p>
       <ul>
-        <li><a href='json.html'>application/json</a> — submitting a form as JSON</li>
+        <li><a href='json/index.html'>application/json</a> — submitting a form as JSON</li>
       </ul>
       <p>
         Specifications to go with:
@@ -34,7 +34,7 @@
         Past experiments:
       </p>
       <ul>
-        <li><a href='cursed.html'>cursed</a> — minimal primitive for cursors</li>
+        <li><a href='cursed/index.html'>cursed</a> — minimal primitive for cursors</li>
       </ul>
     </section>
     <footer>
