--- a/json/index.html
+++ b/json/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <title>formic — json</title>
-    <link rel='stylesheet' href='css/formic.css'>
+    <link rel='stylesheet' href='../css/formic.css'>
   </head>
   <body>
     <header>
@@ -11,7 +11,7 @@
     </header>
     <section>
       <p>
-        <small>Return <a href='index.html'>home</a>.</small>
+        <small>Return <a href='../index.html'>home</a>.</small>
       </p>
       <p>
         This is an experiment to see if it's possible (and useful) to support 
@@ -68,7 +68,7 @@
       <h3>formic</h3>
       <p><small>hacking on forms and editability</small></p>
     </footer>
-    <script src='formic.js'></script>
+    <script src='../formic.js'></script>
     <script src='json.js'></script>
     <script>
       function dumpJSON () {
