--- a/cursed/index.html
+++ b/cursed/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <title>formic — cursed</title>
-    <link rel='stylesheet' href='css/formic.css'>
+    <link rel='stylesheet' href='../css/formic.css'>
   </head>
   <body>
     <header>
@@ -11,7 +11,7 @@
     </header>
     <section>
       <p>
-        <small>Return <a href='index.html'>home</a>.</small>
+        <small>Return <a href='../index.html'>home</a>.</small>
       </p>
       <p>
         One option that could help fix <code>contentEditable</code>, suggested by our friends at
