--- a/specs/json/index.html
+++ b/specs/json/index.html
@@ -372,7 +372,7 @@
           The types
           <dfn><a href='http://people.mozilla.org/~jorendorff/es5.html#sec-15.12.1.2'><code>JSONObject</code></a></dfn>
           and
-          <dfn><a href='http://people.mozilla.org/~jorendorff/es5.html#sec-15.12.1.2'><code>JSONArray</code></a>.</dfn>
+          <dfn><a href='http://people.mozilla.org/~jorendorff/es5.html#sec-15.12.1.2'><code>JSONArray</code></a></dfn>.
         </li>
         <li>
           The
@@ -385,9 +385,9 @@
       <h2>The <dfn><code>application/json</code> encoding algorithm</dfn></h2>
       <p>
         For the purposes of the algorithms below, an <dfn><code>Object</code></dfn> corresponds to
-        the in-memory representation most logical for a <dfn><code>JSONObject</code></dfn> and an
-        <dfn><code>Array</code></dfn> corresponds to the in-memory representation most logical for a
-        <dfn><code>JSONArray</code></dfn>.
+        the in-memory representation for a <a><code>JSONObject</code></a> and an
+        <dfn><code>Array</code></dfn> corresponds to the in-memory representation for a
+        <a><code>JSONArray</code></a>.
       </p>
       <p>
         The following algorithm encodes form data as <code>application/json</code>. It operates
