--- a/specs/json/index.html
+++ b/specs/json/index.html
@@ -14,7 +14,7 @@
           ,   wgURI:        "http://www.w3.org/html/wg/"
           ,   wgPublicList: "public-html"
           ,   wgPatentURI:  "http://www.w3.org/2004/01/pp-impl/40318/status"
-          ,   edDraftURI:   "http://darobin.github.com/formic/specs/json.html"
+          ,   edDraftURI:   "http://darobin.github.com/formic/specs/json/"
           ,   license:      "cc-by"
           ,   bugTracker: {
                   open: "https://github.com/darobin/formic/issues?labels=json&page=1&state=open"
