remove issues, now in lively discusion on GH

--- a/json/index.html
+++ b/json/index.html
@@ -21,6 +21,8 @@
     <section>
       <h2>Example</h2>
       <form id='x'>
+      <input name="mix[0]" value="alpha">
+      <input name="mix[0]" value="bravo"><!--
         <input type=file name='file' multiple>
         <input type=file name='file'>
         <input type=text name='aaa' value='A'>
@@ -60,6 +62,7 @@
         <input type=text name='err[bar]x' value='X'>
         <input type=text name='err[bar][foo][bax]]' value='X'>
         <input type=checkbox name='err[bar]x[foo]' checked>
+-->
       </form>
       <button id='redump'>Redump</button>
       <pre id='log'></pre>
