--- a/specs/json/index.html
+++ b/specs/json/index.html
@@ -401,7 +401,7 @@
       </p>
       <ol>
         <li>Let <var>path</var> be the path we are to parse.</li>
-        <li>Let <var>original</var> be a copy of <path>var</path>.</li>
+        <li>Let <var>original</var> be a copy of <var>path</var>.</li>
         <li>Let <var>steps</var> be an empty list of steps.</li>
         <li>
           Let <var>first key</var> be the result of 
