Fix bad copy 'n paste comment

--- a/specs/json/index.html
+++ b/specs/json/index.html
@@ -290,7 +290,7 @@
           &lt;input name=&#x27;error[bad&#x27; value='BOOM BOOM!'&gt;
         &lt;/form&gt;
 
-        // assuming the user has selected two text files, produces:
+        // produces:
         {
             "error": {
                 "good":   "BOOM!"
